Fix wide screen shop and cart spacings

--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -1,8 +1,12 @@
+@media (min-width: 1500px) {
+  .cart-main {
+    padding: 20px 300px;
+  }
+}
 .cart-main {
   color: #fbfbfb;
   background-color: #b2b4ac;
   min-height: 85vh;
-  padding: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -14,17 +18,21 @@
 .cart-redirect {
   display: flex;
   align-self: center;
-  padding: 0.625em 1.25em;
-  font-size: 1.2em;
   display: inline-block;
-  background-color: #ecc19e;
   border-radius: 5px;
   border: 1px solid #40361d;
+  font-weight: 600;
 }
-.cart-redirect:hover {
-  transform: scale(1.05);
-}
+
 .cart-redirect > a {
   color: #0d0900 !important;
   font-weight: 600;
+}
+.cart-redirect > a:hover {
+  transform: scale(1.03);
+}
+.bag-empty,
+.checkout {
+  background-color: #ecc19e;
+  padding: 0.625em 1.25em;
 }
